poprawienie wyszkukiwania slow w Slowosieci - sprowadzenie wszystkich liter do malej wielkosci

--- a/analizaSlowosieci.ipynb
+++ b/analizaSlowosieci.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,20 +69,21 @@
     "    numberOfWords = len(words_list)\n",
     "    numberOfWordsFound = 0\n",
     "    result = 0\n",
+    "    emotions_list = list()\n",
     "    if(numberOfWords > 0):\n",
     "        emotionsCounter = 0\n",
     "        for el in words_list: \n",
     "            if((emotions['word'] == el)).any():\n",
-    "                print(el)\n",
-    "                emotionsCounter += float(emotions.loc[emotions['word'] == el]['sentiment'].mean())  \n",
+    "                emotions_list.append(el)\n",
+    "                emotionsCounter += float(emotions.loc[emotions['word'] == el]['sentiment'].mean())\n",
     "                numberOfWordsFound = numberOfWordsFound + 1\n",
     "        result = emotionsCounter/numberOfWords\n",
-    "    return [result, numberOfWordsFound]"
+    "    return [result, numberOfWordsFound, emotions_list]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,10 +98,11 @@
     "\n",
     "def calculateOneRow(index,comment, emotion, rate):\n",
     "    lemmatisation_text = re.sub(\"[!#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~']\", '', comment)\n",
-    "    words_list = lemmatisation_dictParser(lemmatisation_text)\n",
-    "    [result, number] = detectingEmotionsInText(words_list)\n",
+    "    lemmatisation_text = lemmatisation_text.decode('utf8').lower()\n",
+    "    words_list = lemmatisation_dictParser(lemmatisation_text.encode('utf8'))\n",
+    "    [result, number, emotions_list] = detectingEmotionsInText(words_list)\n",
     "    result_emotion = getEmotionStatusOfText(result)\n",
-    "    return {\"text\": comment, 'words': len(comment.split()), \"lemmatisation\": words_list, 'wordsAfterLemmatisation': len(words_list), 'wordsFound': number, \"resultOfDetecting\": result, \"detectedEmotion\": result_emotion, 'emotion': emotion, 'rate': rate}\n",
+    "    return {\"text\": comment, 'words': len(comment.split()), \"lemmatisation\": words_list, 'wordsAfterLemmatisation': len(words_list), 'emotionsList': emotions_list, 'wordsFound': number, \"resultOfDetecting\": result, \"detectedEmotion\": result_emotion, 'emotion': emotion, 'rate': rate}\n",
     "\n",
     "def parallelize(data, func):\n",
     "    print (partitions)\n",
@@ -122,12 +124,12 @@
     "for o in result:\n",
     "    result_df = result_df.append(o, ignore_index=True)\n",
     "    \n",
-    "result_df.to_csv('mediaKrytyk-comments-analysis-dictParser.csv', encoding='utf-8', index=False) "
+    "result_df.to_csv('mediaKrytyk-comments-analysis-dictParser-emotionsList.csv', encoding='utf-8', index=False) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,10 +144,11 @@
     "\n",
     "def calculateOneRow(index, emotion, rate, comment):\n",
     "    lemmatisation_text = re.sub(\"[!#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~']\", '', comment)\n",
-    "    words_list = lemmatisation_dictParser(lemmatisation_text)\n",
-    "    [result, number] = detectingEmotionsInText(words_list)\n",
+    "    lemmatisation_text = lemmatisation_text.decode('utf8').lower()\n",
+    "    words_list = lemmatisation_dictParser(lemmatisation_text.encode('utf8'))\n",
+    "    [result, number, emotions_list] = detectingEmotionsInText(words_list)\n",
     "    result_emotion = getEmotionStatusOfText(result)\n",
-    "    return {\"text\": comment, 'words': len(comment.split()), \"lemmatisation\": words_list, 'wordsAfterLemmatisation': len(words_list), 'wordsFound': number, \"resultOfDetecting\": result, \"detectedEmotion\": result_emotion, 'emotion': emotion, 'rate': rate}\n",
+    "    return {\"text\": comment, 'words': len(comment.split()), \"lemmatisation\": words_list, 'wordsAfterLemmatisation': len(words_list), 'emotionsList': emotions_list, 'wordsFound': number, \"resultOfDetecting\": result, \"detectedEmotion\": result_emotion, 'emotion': emotion, 'rate': rate}\n",
     "\n",
     "def parallelize(data, func):\n",
     "    print (partitions)\n",
